# jvulkan-natives-Linux-x86_64

./: .gitignore  CMakeLists.txt  README.md  comCIMtheticshwjviVulkanCoreVK10VulkanCoreProxy.cpp
HelperFunctions/: DebugCallbackListEntry.cpp  DebugReportCallbackListEntry.cpp  DebugUtilsMessengerCallbackListEntry.cpp  StructureHelperFunctions.cpp  VkDebugUtilsMessageTypeFlagsEXTAsEnumSet.cpp  VkImageSubresourceRange.cpp  createEnumFromValue.cpp  createJavaObjectUsingDefaultConstructor.cpp  createVkCheckpointDataNV.cpp  createVkCompositeAlphaFlagsKHRAsEnumSet.cpp  createVkConformanceVersion.cpp  createVkConformanceVersionKHR.cpp  createVkCooperativeMatrixPropertiesNV.cpp  createVkDebugUtilsLabelEXT.cpp  createVkDebugUtilsLabelEXTCollection.cpp  createVkDebugUtilsMessageSeverityFlagBitsEXT.cpp  createVkDebugUtilsMessageTypeFlagsEXTAsEnumSet.cpp  createVkDebugUtilsMessengerCallbackDataEXT.cpp  createVkDebugUtilsMessengerCallbackDataFlagsEXTAsEnumSet.cpp  createVkDebugUtilsObjectNameInfoEXT.cpp  createVkDebugUtilsObjectNameInfoEXTCollection.cpp  createVkDeviceGroupPresentModeFlagsKHRAsEnumSet.cpp  createVkDisplayModeParametersKHR.cpp  createVkDisplayModeProperties2KHR.cpp  createVkDisplayModePropertiesKHR.cpp  createVkDisplayPlaneAlphaFlagBitsKHRAsEnumSet.cpp  createVkDisplayPlaneCapabilitiesKHR.cpp  createVkDisplayPlaneProperties2KHR.cpp  createVkDisplayPlanePropertiesKHR.cpp  createVkDisplayProperties2KHR.cpp  createVkDisplayPropertiesKHR.cpp  createVkExtent2D.cpp  createVkExtent3D.cpp  createVkExternalFenceFeatureFlagsAsEnumSet.cpp  createVkExternalFenceHandleTypeFlagsAsEnumSet.cpp  createVkExternalMemoryFeatureFlagsAsEnumSet.cpp  createVkExternalMemoryFeatureFlagsNVAsEnumSet.cpp  createVkExternalMemoryHandleTypeFlagsAsEnumSet.cpp  createVkExternalMemoryHandleTypeFlagsNVAsEnumSet.cpp  createVkExternalSemaphoreFeatureFlagsAsEnumSet.cpp  (+701 more)
VK11VulkanExtensionFunctions/: getVkSharedPresentSurfaceCapabilitiesKHR.cpp  vkAcquireNextImage2KHR.cpp  vkAcquireNextImageKHR.cpp  vkAcquirePerformanceConfigurationINTEL.cpp  vkBindAccelerationStructureMemoryNV.cpp  vkBindAccelerationStructureMemoryNVX.cpp  vkBindBufferMemory2KHR.cpp  vkBindImageMemory2KHR.cpp  vkCmdBeginConditionalRenderingEXT.cpp  vkCmdBeginDebugUtilsLabelEXT.cpp  vkCmdBeginQueryIndexedEXT.cpp  vkCmdBeginRenderPass2KHR.cpp  vkCmdBeginTransformFeedbackEXT.cpp  vkCmdBindShadingRateImageNV.cpp  vkCmdBindTransformFeedbackBuffersEXT.cpp  vkCmdBuildAccelerationStructureNV.cpp  vkCmdBuildAccelerationStructureNVX.cpp  vkCmdCopyAccelerationStructureNVX.cpp  vkCmdDebugMarkerBeginEXT.cpp  vkCmdDebugMarkerEndEXT.cpp  vkCmdDebugMarkerInsertEXT.cpp  vkCmdDrawIndexedIndirectCountKHR.cpp  vkCmdDrawIndirectByteCountEXT.cpp  vkCmdDrawIndirectCountKHR.cpp  vkCmdDrawMeshTasksIndirectCountNV.cpp  vkCmdDrawMeshTasksIndirectNV.cpp  vkCmdDrawMeshTasksNV.cpp  vkCmdEndConditionalRenderingEXT.cpp  vkCmdEndDebugUtilsLabelEXT.cpp  vkCmdEndQueryIndexedEXT.cpp  vkCmdEndRenderPass2KHR.cpp  vkCmdEndTransformFeedbackEXT.cpp  vkCmdInsertDebugUtilsLabelEXT.cpp  vkCmdNextSubpass2KHR.cpp  vkCmdProcessCommandsNVX.cpp  vkCmdPushDescriptorSetKHR.cpp  vkCmdPushDescriptorSetWithTemplateKHR.cpp  vkCmdReserveSpaceForCommandsNVX.cpp  vkCmdSetCheckpointNV.cpp  vkCmdSetCoarseSampleOrderNV.cpp  (+124 more)
VK11VulkanFunctions/: vkAllocateCommandBuffers.cpp  vkAllocateDescriptorSets.cpp  vkAllocateMemory.cpp  vkBeginCommandBuffer.cpp  vkBindBufferMemory.cpp  vkBindBufferMemory2.cpp  vkBindImageMemory.cpp  vkBindImageMemory2.cpp  vkCmdBeginQuery.cpp  vkCmdBeginRenderPass.cpp  vkCmdBindDescriptorSets.cpp  vkCmdBindIndexBuffer.cpp  vkCmdBindPipeline.cpp  vkCmdBindVertexBuffers.cpp  vkCmdBlitImage.cpp  vkCmdClearAttachments.cpp  vkCmdClearColorImage.cpp  vkCmdClearDepthStencilImage.cpp  vkCmdCopyBuffer.cpp  vkCmdCopyBufferToImage.cpp  vkCmdCopyImage.cpp  vkCmdCopyImageToBuffer.cpp  vkCmdCopyQueryPoolResults.cpp  vkCmdDispatch.cpp  vkCmdDispatchBase.cpp  vkCmdDispatchIndirect.cpp  vkCmdDraw.cpp  vkCmdDrawIndexed.cpp  vkCmdDrawIndexedIndirect.cpp  vkCmdDrawIndirect.cpp  vkCmdEndQuery.cpp  vkCmdEndRenderPass.cpp  vkCmdExecuteCommands.cpp  vkCmdFillBuffer.cpp  vkCmdNextSubpass.cpp  vkCmdPipelineBarrier.cpp  vkCmdPushConstants.cpp  vkCmdResetEvent.cpp  vkCmdResetQueryPool.cpp  vkCmdResolveImage.cpp  (+125 more)
VulkanExtensionFunctions/: vkAcquireNextImage2KHR.cpp  vkAcquireNextImageKHR.cpp  vkAcquirePerformanceConfigurationINTEL.cpp  vkAcquireProfilingLockKHR.cpp  vkBindAccelerationStructureMemoryKHR.cpp  vkBindAccelerationStructureMemoryNV.cpp  vkBindBufferMemory2KHR.cpp  vkBindImageMemory2KHR.cpp  vkCmdBeginConditionalRenderingEXT.cpp  vkCmdBeginDebugUtilsLabelEXT.cpp  vkCmdBeginQueryIndexedEXT.cpp  vkCmdBeginRenderPass2KHR.cpp  vkCmdBeginTransformFeedbackEXT.cpp  vkCmdBindPipelineShaderGroupNV.cpp  vkCmdBindShadingRateImageNV.cpp  vkCmdBindTransformFeedbackBuffersEXT.cpp  vkCmdBindVertexBuffers2EXT.cpp  vkCmdBuildAccelerationStructureNV.cpp  vkCmdCopyAccelerationStructureNV.cpp  vkCmdDebugMarkerBeginEXT.cpp  vkCmdDebugMarkerEndEXT.cpp  vkCmdDebugMarkerInsertEXT.cpp  vkCmdDrawIndexedIndirectCountKHR.cpp  vkCmdDrawIndirectByteCountEXT.cpp  vkCmdDrawIndirectCountKHR.cpp  vkCmdDrawMeshTasksIndirectCountNV.cpp  vkCmdDrawMeshTasksIndirectNV.cpp  vkCmdDrawMeshTasksNV.cpp  vkCmdEndConditionalRenderingEXT.cpp  vkCmdEndDebugUtilsLabelEXT.cpp  vkCmdEndQueryIndexedEXT.cpp  vkCmdEndRenderPass2KHR.cpp  vkCmdEndTransformFeedbackEXT.cpp  vkCmdExecuteGeneratedCommandsNV.cpp  vkCmdInsertDebugUtilsLabelEXT.cpp  vkCmdNextSubpass2KHR.cpp  vkCmdPreprocessGeneratedCommandsNV.cpp  vkCmdProcessCommandsNVX.cpp  vkCmdPushDescriptorSetKHR.cpp  vkCmdPushDescriptorSetWithTemplateKHR.cpp  (+146 more)
VulkanFunctions/: vkAllocateCommandBuffers.cpp  vkAllocateDescriptorSets.cpp  vkAllocateMemory.cpp  vkBeginCommandBuffer.cpp  vkBindBufferMemory.cpp  vkBindBufferMemory2.cpp  vkBindImageMemory.cpp  vkBindImageMemory2.cpp  vkCmdBeginQuery.cpp  vkCmdBeginRenderPass.cpp  vkCmdBeginRenderPass2.cpp  vkCmdBindDescriptorSets.cpp  vkCmdBindIndexBuffer.cpp  vkCmdBindPipeline.cpp  vkCmdBindVertexBuffers.cpp  vkCmdBlitImage.cpp  vkCmdClearAttachments.cpp  (+161 more)
(+51 files in other folders)
